--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "shuvroroy/laravel-preset": "^3.1"
     },
     "config": {
         "optimize-autoloader": true,
@@ -61,6 +62,6 @@
         ],
         "format": [
             "vendor/bin/php-cs-fixer fix"
-        ],
+        ]
     }
 }
