--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
+        "laravel-mix-purgecss": "^2.2.3",
         "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "postcss-import": "^12.0.0",
+        "postcss-nesting": "^7.0.0",
         "prettier": "1.16.4",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "tailwindcss": "^0.7.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.2"
     }
 }
